@@ -1,17 +1,17 @@
 # Copyright (C) 2006 by Szilveszter Farkas (Phanatic) <szilveszter.farkas@gmail.com>
 # Some parts of the code are:
 # Copyright (C) 2005, 2006 by Canonical Ltd
-
+#
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.
-
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
@@ -91,6 +91,7 @@ def remove(file_list, new=False):
     
     :param new: if True, the 'added' files will be removed
     """
+    import bzrlib
     from bzrlib.builtins import tree_files
     
     try:
@@ -105,8 +106,12 @@ def remove(file_list, new=False):
             raise NoFilesSpecified
     else:
         from bzrlib.delta import compare_trees
-        added = [compare_trees(tree.basis_tree(), tree,
-                               specific_files=file_list).added]
+        if (bzrlib.version_info[0] == 0) and (bzrlib.version_info[1] < 9):
+            added = [compare_trees(tree.basis_tree(), tree,
+                                   specific_files=file_list).added]
+        else:
+            added = [tree.changes_from(tree.basis_tree(),
+                                       specific_files=file_list).added]
         file_list = sorted([f[0] for f in added[0]], reverse=True)
         if len(file_list) == 0:
             raise NoMatchingFiles
