@@ -1,15 +1,15 @@
 # Copyright (C) 2006 by Szilveszter Farkas (Phanatic) <szilveszter.farkas@gmail.com>
-
+#
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.
-
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
@@ -66,6 +66,8 @@ class OliveGtk:
                 "on_menuitem_branch_checkout_activate": handler.on_menuitem_branch_checkout_activate,
                 "on_menuitem_branch_commit_activate": handler.on_menuitem_branch_commit_activate,
                 "on_menuitem_branch_push_activate": handler.on_menuitem_branch_push_activate,
+                "on_menuitem_branch_pull_activate": handler.not_implemented,
+                "on_menuitem_branch_status_activate": handler.on_menuitem_branch_status_activate,
                 "on_menuitem_stats_diff_activate": handler.on_menuitem_stats_diff_activate,
                 "on_menuitem_stats_log_activate": handler.not_implemented,
                 "on_menuitem_stats_infos_activate": handler.not_implemented,
