@@ -1,15 +1,15 @@
 # Copyright (C) 2006 by Szilveszter Farkas (Phanatic) <szilveszter.farkas@gmail.com>
-
+#
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.
-
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
@@ -38,6 +38,7 @@ from diff import OliveDiff
 from menu import OliveMenu
 from push import OlivePush
 from remove import OliveRemove
+from status import OliveStatus
 
 class OliveHandler:
     """ Signal handler class for Olive. """
@@ -76,6 +77,11 @@ class OliveHandler:
         """ Branch/Push... menu handler. """
         push = OlivePush(self.gladefile, self.comm)
         push.display()
+    
+    def on_menuitem_branch_status_activate(self, widget):
+        """ Branch/Status... menu handler. """
+        status = OliveStatus(self.gladefile, self.comm)
+        status.display()
     
     def on_menuitem_branch_initialize_activate(self, widget):
         """ Initialize current directory. """
